--- a/css/APropos.css
+++ b/css/APropos.css
@@ -1,3 +1,7 @@
+/* Appel des différents styles */
+/* Ecriture du Titre principal de la page */
+@import url('https://fonts.googleapis.com/css2?family=Lemonada:wght@500&display=swap'); /* font-family: 'Lemonada', cursive; */
+
 /* ------------------------------------------------------- */
 /*            MISE EN FORME DE MA PAGE APROPOS             */
 
@@ -8,77 +12,62 @@
 #titre_page {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
-    grid-template-rows: 20vh;
+    grid-template-rows: 250px;
     align-items: center;
-    margin-top: 8vh;
+    margin-top: 56px;
     background-image: url("../img/Fond_titre.webp");
     background-size: cover;
 }
 #titre_page .valeur_flou {
-    font-family: cursive;
+    font-family: 'Lemonada', cursive;
     text-align: center;
     font-size: 200px;
-    color: rgb(3 125 141);
-    text-shadow:  white 0.006em 0.006em 0.007em,
-                    #9c9c9c 1px 1px 1px,
-                    #9c9c9c 1px 2px 1px,
-                    #9c9c9c 1px 3px 1px,
-                    #9c9c9c 1px 4px 1px,
-                    #9c9c9c 1px 5px 1px,
-                    #9c9c9c 1px 6px 1px,
-                    #9c9c9c 1px 7px 1px,
-                    #9c9c9c 1px 8px 1px,
-                    #9c9c9c 1px 9px 1px,
-                    #9c9c9c 1px 10px 1px,
-                    #9c9c9c 1px 11px 1px,
-                    #9c9c9c 1px 12px 1px;
+	font-weight: 500;
+    color: rgb(21 140 94);
 }
 /* Mise en forme pour écran < 450px */
 @media screen and (max-width: 450px) {
     #titre_page {
-        grid-template-rows: 20vh;
+        grid-template-rows: 250px;
     }
     #titre_page .valeur_flou {
         font-size: 50px;
-	}
-    #titre_page .valeur_double {
-        font-size: 35px;
 	}
 }
 /* Mise en forme pour écran entre 450 px et 700px */
 @media screen and (min-width: 450px) and (max-width: 700px) {
     #titre_page {
-        grid-template-rows: 25vh;
+        grid-template-rows: 250px;
     }
     #titre_page .valeur_flou {
-        font-size: 100px;
+        font-size: 70px;
 	}
 }
 /* Mise en forme pour écran entre 700 px et 1200px  */
 @media screen and (min-width: 700px) and (max-width: 1200px) {
     #titre_page {
-        grid-template-rows: 30vh;
+        grid-template-rows: 250px;
     }
     #titre_page .valeur_flou {
-        font-size: 120px;
+        font-size: 110px;
 	}
 }
 /* Mise en forme pour écran entre 1200 px et 1600px  */
 @media screen and (min-width: 1200px) and (max-width: 1600px) {
     #titre_page {
-        grid-template-rows: 35vh;
+        grid-template-rows: 250px;
     }
     #titre_page .valeur_flou {
-        font-size: 150px;
+        font-size: 120px;
 	}
 }
 /* Mise en forme pour écran supérieur à 1600px */
 @media screen and (min-width: 1600px) {
     #titre_page {
-        grid-template-rows: 40vh;
+        grid-template-rows: 300px;
     }
     #titre_page .valeur_flou {
-        font-size: 200px;
+        font-size: 160px;
 	}
 }
 
@@ -145,7 +134,7 @@
 
 #valeur_entrep .design_info .flip-valeur {
     background-color: #333;
-    width: 300px;
+    width: auto;
     height: 200px;
     border: none;
     text-align: center;
@@ -689,7 +678,7 @@
         font-size: 18px;
     }
     #parten_entreprise .parten_logo li img{
-        width: 50px;
+        width: 120px;
     }
 }
 /* Mise en forme pour écran entre 450 px et 700px */
@@ -707,7 +696,7 @@
         font-size: 24px;
     }
     #parten_entreprise .parten_logo li img{
-        width: 80px;
+        width: 180px;
     }
 }
 /* Mise en forme pour écran entre 700 px et 1200px  */
@@ -726,7 +715,7 @@
         font-size: 36px;
     }
     #parten_entreprise .parten_logo li img{
-        width: 140px;
+        width: 240px;
     }
 }
 /* Mise en forme pour écran entre 700 px et 1600px  */
@@ -744,7 +733,7 @@
         font-size: 24px;
     }
     #parten_entreprise .parten_logo li img{
-        width: 260px;
+        width: 300px;
     }
 }
 /* Mise en forme pour écran supérieur à 1600px */
