--- a/css/Blog.css
+++ b/css/Blog.css
@@ -153,3 +153,87 @@
     margin: 0;
     margin-bottom: 5px;
 }
+
+
+
+/* --------------------------------- */
+/* --------------------------------- */
+/*  MISE EN FORME D'UN NOUVEAU COMM  */
+/* --------------------------------- */
+
+#new_comment {
+    text-align: center;
+}
+#new_comment .button_close button {
+    background-color: #189687;
+    color: white;
+    padding: 10px 10px;
+    margin: 8px;
+    border: none;
+    cursor: pointer;
+    height: 100%;
+    opacity: 0.9;
+}
+#new_comment .button_close button:hover {
+    opacity:1;
+}
+#new_comment .ajout_avis .avis input, textarea {
+    margin-top: 1em;
+    width: 80%;
+    height: 50px;
+    box-sizing: border-box;
+    padding-left: 10px;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 1px solid #888;
+    background: transparent;
+}
+#new_comment .ajout_avis {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: #ffffffc7;
+    padding-top: 50px;
+}
+#new_comment .ajout_avis .avis {
+    background-color: white;
+    width: 80%;
+    margin: 0 auto;
+    padding: 1em;
+    box-shadow: 2px 2px 20px #888;
+}
+#new_comment .ajout_avis .close {
+    position: absolute;
+    right: 35px;
+    top: 15px;
+    font-size: 40px;
+    font-weight: bold;
+    color: #cecccc;
+} 
+#new_comment .ajout_avis .close:hover,
+#new_comment .ajout_avis .close:focus {
+    color: #f44336;
+    cursor: pointer;
+} 
+#new_comment .ajout_avis .avis .titre_avis {
+    text-align: center;
+    color: black;
+}
+#new_comment .ajout_avis .avis .form_bouton {
+    margin-top: 1em;
+    font-size: 15px;
+    cursor: pointer;
+    background: #189687;
+    color: white;
+    border-radius: 20px;
+    border: 0;
+}
+#new_comment .ajout_avis .avis .form_bouton:hover {
+    background: #0E7894;
+}
