--- a/css/chat.css
+++ b/css/chat.css
@@ -6,7 +6,7 @@
 }
 
 .chat-bar-collapsible .collapsible {
-    background-color: rgb(82, 151, 255);
+    background: linear-gradient(45deg, #138d5c, #1a9487, #0e7693);
     color: white;
     cursor: pointer;
     padding: 18px;
@@ -17,6 +17,7 @@
     border-radius: 10px 10px 0px 0px;
     border: 3px solid white;
     border-bottom: none;
+    text-align: center;
 }
 
 .chat-bar-collapsible .content {
@@ -114,8 +115,6 @@
     opacity: .7;
 }
 
-/* Chat bubbles */
-
 .chat-bar-collapsible #userInput {
     width: 75%;
 }
@@ -146,7 +145,7 @@
 .chat-bar-collapsible .userText span {
     line-height: 1.5em;
     display: inline-block;
-    background: #0e7994cf;
+    background: linear-gradient(315deg, #138d5c, #1a9487, #0e7693);
     padding: 10px;
     border-radius: 8px;
     border-bottom-right-radius: 2px;
